--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "author": "GetStream",
   "homepage": "https://getstream.io/chat/",
   "typings": "./types/index.d.ts",
-  "main": "dist/index.js",
-  "module": "dist/index.es.js",
-  "jsnext:main": "dist/index.es.js",
+  "main": "dist/main/index.js",
+  "module": "dist/module/index.js",
+  "jsnext:main": "dist/module/index.js",
   "style": "dist/css/index.css",
   "jsdelivr": "./dist/browser.full-bundle.min.js",
   "keywords": [
