--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
     "@babel/preset-typescript": "^7.9.0",
     "@stream-io/rollup-plugin-node-builtins": "^2.1.5",
     "@testing-library/jest-dom": "^5.5.0",
+    "@testing-library/react": "^10.0.3",
+    "@testing-library/react-hooks": "^3.3.0",
     "@types/braintree__sanitize-url": "^4.0.0",
     "@types/deep-equal": "^1.0.1",
     "@types/seamless-immutable": "7.1.12",
@@ -100,7 +102,6 @@
     "postcss-loader": "^3.0.0",
     "prettier": "^2.0.5",
     "react-styleguidist": "^11.0.5",
-    "@testing-library/react": "^10.0.3",
     "react-test-renderer": "^16.13.1",
     "rollup": "^2.7.1",
     "rollup-plugin-babel": "^4.4.0",
